refactor: replace guava ImmutableMap with jdk Map